# violet-vault

./: .coderabbit.yaml  .coverage  .dependency-fix-test  .env  .env.development  .env.example  .env.production  .env.staging  .env.test  .eslintcache  .full_salvo_marker  .full_salvo_passed  .full_salvo_timestamp  .gitattributes  .gitignore  .golangci.yml  .markdownlintignore  .prettierignore  .salvo_stats.json  .sentryclirc  .vercel-trigger  Agent.md  BUDGET_HISTORY_TODO.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIREBASE_RULES_UPDATE.md  GEMINI.md  ICON_MIGRATION_PLAN.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  PHASE-1-CONVERSION-PROGRESS.md  PWA-TYPES-IMPLEMENTATION.md  README-PHASE-1.md  README.md  ROADMAP.md  SECURITY.md  (+46 more)
.claude/: CLAUDE.md
.clinerules/: rules.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.husky/: commit-msg  pre-commit  pre-push
.vercel/: project.json
Lighthouse Reports 4/: -analytics.report.html  -analytics.report.json  -bills.report.html  -bills.report.json  -dashboard.report.html  -dashboard.report.json  -envelopes.report.html  -envelopes.report.json  -savings.report.html  -savings.report.json  -transactions.report.html  -transactions.report.json  SUMMARY.md
api/: DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  analytics.py  autofunding.py  budget.go  budget_test.go  bug-report.go  bug-report_test.go  example_integration.ts  go.mod  go.sum  import.go  import_test.go  integration-example.ts  main.py  models.py  requirements.txt  test_analytics.py  test_api.py  test_audit.py  test_main.py  test_snapshot_valid.json  test_snapshot_violations.json
cloudflare-worker/: API.md  README.md  USAGE.md  api-docs.html  bug-report-worker.js  bug-report-worker.ts  openapi.yaml  package-lock.json  package.json  tsconfig.json  wrangler.toml
configs/: commitlint.config.cjs  eslint.config.js
dev-dist/: sw.js  sw.js.map  workbox-471b75d6.js  workbox-471b75d6.js.map
docs/: 2.0-AUDIT-SUMMARY.md  2.0-RELEASE-AUDIT-REPORT.md  2.0-RELEASE-CHECKLIST.md  2.0-RELEASE-README.md  ANALYTICS_OPTIMIZATION.md  API-Examples.md  API-Response-Validation-Guide.md  API.md  BUDGET_HISTORY_TODO.md  Branch-Protection-Rules.md  Branch-Protection-Setup.md  Bug-Report-System-Setup.md  CHANGELOG.md  COMPREHENSIVE-REFACTORING-PLAN.md  CONFIG-MIGRATION-ANALYSIS.md  CONFIG-MIGRATION-INDEX.md  CONFIG-QUICK-REFERENCE.txt  CONTRIBUTING.md  CRUD_VERIFICATION.md  Component-Refactoring-Standards.md  DOCUMENTATION_INDEX.md  ESLint-Rules.md  ESLint-Warning-Resolution-Rules.md  ESLint-Warnings.md  ESLint-Zustand-Rules.md  Environment-Configuration.md  Error-Monitoring-Strategy-Analysis.md  Firebase-Setup-Guide.md  GITHUB-WORKFLOWS-AUDIT.md  ICON_MIGRATION_PLAN.md  LINT_WARNINGS.md  MARKDOWN-CLEANUP-PLAN.md  MILESTONES.md  (+45 more)
src/: App.jsx  (+11 more)
(+3640 files in other folders)
